# LearnOpenGL

./: CMakeLists.txt  OpenGLPractice.sln  README.md
OpenGLPractice/: OpenGLPractice.vcxproj  glad.c  main.cpp
res/: loc.txt
res/shaders/: basic.shader  fragment.shader  green.shader  lightfragment.shader  lightvertex.shader  vertex.shader
src/: camera.h  geodata.h  glad.c  glad.h  main.cpp  shader.h  vertexarray.h
